# katoclock

./: .clangd  .gitignore  .prettierrc  Makefile  README.md
.githooks/: pre-commit
cpp/: CMakeLists.txt  CMakePresets.json
cpp/src/: clockimageprovider.cpp  clockimageprovider.hpp  config.hpp  renderer.cpp  renderer.hpp  timebridge.cpp  timebridge.h
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: configGeneral.qml  main.qml
scripts/: watch.sh
